[package]
name = "rustchat"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
crossterm = "0.25"
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1.0"
futures = "0.3"
tokio-stream = "0.1.17"
config = "0.15.11"
